--- a/aso.html
+++ b/aso.html
@@ -27,6 +27,8 @@
         <li>vatritto bojay rakha</li>
     </ol>
    </div>
+   <h1>new thing</h1>
+   <img src="messi.jfif" alt="messi">
 
   </body>
 </html>
