--- a/aso.html
+++ b/aso.html
@@ -29,6 +29,8 @@
    </div>
    <h1>new thing</h1>
    <img src="messi.jfif" alt="messi">
+   <h1>neymar</h1>
+   <img src="neymar.jfif" alt="">
 
   </body>
 </html>
