--- a/aso.html
+++ b/aso.html
@@ -29,6 +29,7 @@
    </div>
    <h1>new thing</h1>
    <img src="messi.jfif" alt="messi">
+    <img src="loine.jpeg" alt="Shingho">
 
   </body>
 </html>
